--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,12 @@ Flask-Cors==3.0.7
 Flask-SQLAlchemy==2.3.2
 idna==2.7
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.1.0
 packaging==18.0
 pyparsing==2.3.0
 requests==2.20.1
 six==1.11.0
-SQLAlchemy==1.2.14
+SQLAlchemy>=1.3.0
 urllib3==1.24.1
 Werkzeug==0.14.1
